# Calculator

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
model/: eval.cpp  eval.hpp  lexer.cpp  lexer.hpp  number.hpp  object.hpp  op.hpp  parser.hpp  parser_impl.hpp  status.hpp  token.hpp
presenter/: elements.cpp  elements.hpp  expression.hpp  formatters.hpp  optimizedlist.hpp  presenter.cpp  presenter.hpp  proxylexer.hpp  settings.hpp  stdextension.hpp  translator.hpp  trie.hpp
resources/: Calculator_en.ts  Calculator_ru.ts  styles.qss
view/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
